# harmonia

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-DATASET  README.md  SECURITY.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
dashboard/: app.py
dataset/citations/: britton-2013.json  chang-2017.json  colatsky-2016.json  crumb-2016.json  dutta-2017.json  elkins-2013.json  fermini-2016.json  johnstone-2016.json  kramer-2013.json  li-2017.json  li-2019.json  moss-2005.json  ohara-2011.json  passini-2017.json  ridder-2020.json  tomek-2019.json
dataset/priors/: harmonia-ic50-prior-v1.json
dataset/records/: ap_model.cipaordv1.0.json  ap_model.ord.json  ap_model.tor_ord.json  channel_block.astemizole.ical.json  channel_block.astemizole.ikr.json  channel_block.azimilide.ikr.json  channel_block.azimilide.iks.json  channel_block.bepridil.ical.json  channel_block.bepridil.ikr.json  channel_block.bepridil.iks.json  channel_block.bepridil.ina.json  channel_block.bepridil.inal.json  channel_block.bepridil.ito.json  channel_block.chlorpromazine.ical.json  channel_block.chlorpromazine.ikr.json  channel_block.chlorpromazine.ina.json  channel_block.chlorpromazine.inal.json  channel_block.cisapride.ical.json  channel_block.cisapride.ikr.json  channel_block.cisapride.ina.json  channel_block.clarithromycin.ikr.json  channel_block.clozapine.ical.json  channel_block.clozapine.ikr.json  channel_block.clozapine.ina.json  channel_block.diltiazem.ical.json  channel_block.diltiazem.ikr.json  channel_block.diltiazem.inal.json  channel_block.disopyramide.ical.json  channel_block.disopyramide.ikr.json  channel_block.disopyramide.ina.json  channel_block.dofetilide.ikr.json  channel_block.domperidone.ikr.json  channel_block.droperidol.ikr.json  channel_block.ibutilide.ikr.json  channel_block.loratadine.ical.json  channel_block.loratadine.ikr.json  channel_block.metoprolol.ikr.json  channel_block.mexiletine.ikr.json  channel_block.mexiletine.ina.json  channel_block.mexiletine.inal.json  (+64 more)
dataset/references/: cipa_binding_reference.json  cipa_block_reference.json  cipa_drugref_reference.json  cipa_validation_reference.json
dataset/schema/: context.jsonld  prior.schema.json  record.schema.json
dataset/tools/: build_cipa_reference.py  build_posteriors.py  build_records.py
docs/: make_figures.py
docs/about/: essay.md
docs/specs/: v0.2-bayesian-dose-response-uq.md  v0.3-disease-populations.md  v0.4-cqinward-biomarker.md  v0.5-calibrated-populations.md  v0.6-cipa-dynamic-herg.md  v0.7-flip-frequency-ci.md  v0.8-machine-crosscheck.md  v0.8.2-pending-human-review.md  v0.8.3-drug-reference-corroboration.md  v0.8.4-binding-crosscheck.md
exports/cellml/: cipaordv1.0.cellml  ord.cellml  tor_ord.cellml
exports/myokit/: cipaordv1.0.mmt  ord.mmt  tor_ord.mmt
exports/omex/: cipaordv1.0.omex  ord.omex  tor_ord.omex
exports/sbml/: cipaordv1.0.sbml  ord.sbml  tor_ord.sbml
exports/sedml/: cipaordv1.0.sedml  ord.sedml  tor_ord.sedml
exports/tables/: cipa_inputs.csv  cipa_inputs.json  citations.bib  parameters.csv
notebooks/: 01_flip_frequency.ipynb  02_bayesian_uq.ipynb  03_populations.ipynb  README.md
python/harmonia/: __init__.py  cli.py  crosscheck.py  exposure.py  filter.py  infer.py  load.py  performance.py  populations.py  records.py  simulate.py  validate.py
python/harmonia/export/: __init__.py  annotate.py  cellml.py  cipa_inputs.py  combine.py  csv_bibtex.py  model_spec.py  myokit.py  reference.py  registry.py  sbml.py  sedml.py
tests/: conftest.py  test_calibrated_populations.py  test_cipa_binding.py  test_cli.py  test_combination.py  test_cqinward.py  test_crosscheck.py  test_dashboard.py  test_dataset.py  test_disease_populations.py  test_dynamic_binding.py  test_exports.py  test_exposure.py  test_flip_ci.py  test_infer.py  test_infer_raw.py  test_kernel.py  test_pending_review.py  test_performance.py  test_population.py  test_sensitivity.py  test_simulate.py  test_sobol.py  test_uq_assess.py
