[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonia"
version = "0.1.0"
description = "Curated, citation-backed, variability-aware dataset of cardiac ion-channel drug-block parameters and the in-silico ventricular AP models that turn them into a torsade-de-pointes (proarrhythmia) risk distribution."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Clay Good" }]
keywords = [
    "cardiac-electrophysiology",
    "ion-channel",
    "hERG",
    "CiPA",
    "proarrhythmia",
    "torsade-de-pointes",
    "qNet",
    "uncertainty-quantification",
    "CellML",
    "Myokit",
    "SBML",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.20", "pandas>=1.3", "altair>=4.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
notebooks = ["jupyter", "nbmake", "matplotlib", "pandas"]

[project.urls]
Homepage = "https://github.com/clay-good/harmonia"
Repository = "https://github.com/clay-good/harmonia"
Issues = "https://github.com/clay-good/harmonia/issues"

[project.scripts]
harmonia = "harmonia.cli:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
harmonia = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.harmonia]
# Path to the dataset (source of truth). Resolved relative to the repo root by
# harmonia.load when the package is used from a source checkout.
dataset_dir = "dataset"
